--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,10 +43,20 @@ services:
     ports:
       - 5601:5601
     environment:
+      SERVERNAME: localhost
       ELASTICSEARCH_URL: https://es01:9200
-      ELASTICSEARCH_HOSTS: "https://es01:9200"
+      ELASTICSEARCH_HOSTS: https://es01:9200
+      ELASTICSEARCH_USERNAME: kibana_system
+      ELASTICSEARCH_PASSWORD: glh8eRUavKspZtqQxReY
+      ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES: $CERTS_DIR/ca/ca.crt
+      SERVER_SSL_ENABLED: "true"
+      SERVER_SSL_KEY: $CERTS_DIR/kib01/kib01.key
+      SERVER_SSL_CERTIFICATE: $CERTS_DIR/kib01/kib01.crt
     networks:
       - elastic
+    volumes:    
+      - certs:$CERTS_DIR
+      - ./kibana/config/kibana.yml:/usr/share/kibana/config/kibana.yml
 
 volumes:
   data01:
